; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_array_write_text_offset.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_array_write_text_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@new_text_cur_offset = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @array_write_text_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @array_write_text_offset(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @new_text_cur_offset, align 4
  %7 = call i32 @writeout_int(i32 %6)
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @metafile_get_text(i32 %8, i32* %5)
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @new_text_cur_offset, align 4
  %12 = add nsw i32 %11, %10
  store i32 %12, i32* @new_text_cur_offset, align 4
  ret i32 0
}

declare dso_local i32 @writeout_int(i32) #1

declare dso_local i32 @metafile_get_text(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
